apps/nextcloud/02-post-resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-route
  namespace: nextcloud
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-cloudflare
      namespace: kube-system
  hostnames:
    - "nextcloud.maddin.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nextcloud
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
